Change the dcat ext url to aksw dcat repo and set ckan ext configuration on startup

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:ckan/ckanext-harvest.git
 [submodule "Plugins/ckanext-dcat"]
 	path = Plugins/ckanext-dcat
-	url = git@github.com:ckan/ckanext-dcat.git
+	url = git@github.com:AKSW/ckanext-dcat.git
