--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Plugins/ckanext-harvest"]
 	path = Plugins/ckanext-harvest
-	url = git@github.com:ckan/ckanext-harvest.git
+	url = https://github.com/ckan/ckanext-harvest.git
 [submodule "Plugins/ckanext-dcat"]
 	path = Plugins/ckanext-dcat
-	url = git@github.com:AKSW/ckanext-dcat.git
+	url = https://github.com/AKSW/ckanext-dcat.git
