--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -1,3 +1,4 @@
+# docker-compose build && docker-compose up
 # If you experience problems with the CKAN container not being
 # able to connect to the DB, then most likely the DB has not
 # started up quickly enough. Just do "docker-compose up ckan"
@@ -11,21 +12,21 @@ services:
     networks:
         - sub
         - db
-        - sparql
-    expose:
-       - "5000"
+    ports:
+       - "80:5000"
     environment:
        CKAN_DATASTORE_WRITE: "postgresql://ckan:ckan@postgresql:5432/datastore_default"
        CKAN_DATASTORE_READ: "postgresql://datastore_default:datastore@postgresql:5432/datastore_default"
        CKAN_PUSHER_URL: "http://pusher:8800"
        CKAN_REDIS_URL: "redis://redis:6379/0"
-       CKAN_SITE_URL: "https://${BASE_DOMAIN}"
+       CKAN_SITE_URL: "http://${LOCAL_ADDRESS}:80"
        CKAN_SOLR_URL: "http://solr:8983/solr/ckan"
        CKAN_SQLALCHEMY_URL: "postgresql://ckan:ckan@postgresql:5432/ckan"
-       CKAN_EXT_DATARETRIEVAL: "http://dataretrieval:8080"
-       VIRTUAL_HOST: "${BASE_DOMAIN}"
-       VIRTUAL_PORT: "5000"
-       LETSENCRYPT_HOST: "${BASE_DOMAIN}"
+    #volumes:
+       # - ./ckan-entrypoint.sh:/ckan-entrypoint.sh 
+       #- ../Plugins/ckanext-TIBtheme:/usr/lib/ckan/default/src/ckanext-TIBtheme
+       # - ../Plugins/ckanext-SPARQLWrapper:/usr/lib/ckan/default/src/ckanext-SPARQLWrapper
+       # - ../Plugins/ckanext-videoviewer:/usr/lib/ckan/default/src/ckanext-videoviewer
   postgresql:
     build: ./postgresql-loaded/
     image: postgresql:loaded
@@ -63,6 +64,8 @@ services:
       image: docker.pkg.github.com/aksw/service-dataretrieval/dataretrieval:main
       expose:
           - "8080"
+      ports:
+          - "8080:8080"
       environment:
           - SPARQL_URL=http://virtuoso:8890/sparql
           - SPARQL_USERNAME=${VIRTUOSO_USER}
@@ -75,10 +78,7 @@ services:
     expose:
         - "8890"
     environment:
-        DBA_PASSWORD: "${VIRTUOSO_PASSWORD}"
-        VIRTUAL_HOST: "sparql.${BASE_DOMAIN}"
-        VIRTUAL_PORT: "8890"
-        LETSENCRYPT_HOST: "sparql.${BASE_DOMAIN}"
+        - DBA_PASSWORD=${VIRTUOSO_PASSWORD}
     networks:
         - sparql
         - sub
