--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -74,10 +74,10 @@ services:
       networks:
           - sparql
   virtuoso:
-    image: openlink/virtuoso-opensource-7
-    ports:
-        - "1111:1111"
-        - "8890:8890"
+    image: docker.pkg.github.com/aksw/docker-virtuoso/docker-virtuoso:latest
+    expose:
+        - "1111"
+        - "8890"
     environment:
         - DBA_PASSWORD=${VIRTUOSO_PASSWORD}
         - SPARQL_UPDATE=true
