--- a/docker/.env.template
+++ b/docker/.env.template
@@ -1,3 +1,8 @@
 BASE_DOMAIN=stream-dataspace.net
 VIRTUOSO_USER=dba
 VIRTUOSO_PASSWORD=admin
+GIT_REPO=git@github.com:stream-project/ontology.git
+GRAPH_URI=http://stream-ontology.com/
+GIT_EMAIL=
+GIT_NAME=
+CRON_JOB=import
