Add a new folder+container which is able to retrieve the metadata from NOMAD and does store it into virtuoso

--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -81,12 +81,13 @@ services:
     environment:
         - DBA_PASSWORD=${VIRTUOSO_PASSWORD}
         - SPARQL_UPDATE=true
-        - VIRT_Parameters_DirsAllowed=., /usr/local/virtuoso-opensource/share/virtuoso/vad, /virtuoso/data
+        - VIRT_Parameters_DirsAllowed=., /usr/local/virtuoso-opensource/share/virtuoso/vad, /virtuoso/data, /virtuoso/metadataimport
     networks:
         - sparql
         - sub
     volumes:
         - files:/virtuoso/data
+        - files2:/virtuoso/metadataimport
   importer:
     build: /Users/kurt/Documents/virtuoso-import-docker/
     command: /virtuoso/envsetter.sh # Use whatever script you need here
@@ -104,6 +105,19 @@ services:
         - /Users/kurt/Documents/virtuoso-import-docker/config:/root/.ssh/config
     networks:
         - sparql
+  metadataimporter:
+    build: ./store_metadata/
+    environment:
+        VIRTUOSO_PASSWORD: ${VIRTUOSO_PASSWORD}
+        VIRTUOSO_HOST: virtuoso
+        VIRTUOSO_PORT: 1111
+        VIRTUOSO_USER: dba
+        GRAPH: http://example.de
+    volumes:
+        - files2:/virtuoso/metadataimport
+    networks:
+        - sparql
+      
       
 networks:
     db: 
@@ -112,3 +126,4 @@ networks:
         
 volumes:
     files: {}
+    files2: {}
