Switch to CKAN 2.9.4
Also pusher, Solr, PostgreSQL and Redis are another new version

--- a/docker/ckan_harvesting.conf
+++ b/docker/ckan_harvesting.conf
@@ -4,7 +4,7 @@
 
 [program:ckan_gather_consumer]
 
-command=/usr/lib/ckan/default/bin/paster --plugin=ckanext-harvest harvester gather_consumer --config=/etc/ckan/default/ckan.ini
+command=/bin/bash -c 'export $(cat /etc/ckan/.env | xargs) && ckan --config=/etc/ckan/ckan.ini harvester gather-consumer'
 
 ; user that owns virtual environment.
 user=root
@@ -18,7 +18,7 @@ startsecs=10
 
 [program:ckan_fetch_consumer]
 
-command=/usr/lib/ckan/default/bin/paster --plugin=ckanext-harvest harvester fetch_consumer --config=/etc/ckan/default/ckan.ini
+command=/bin/bash -c 'export $(cat /etc/ckan/.env | xargs) && ckan --config=/etc/ckan/ckan.ini harvester fetch-consumer'
 
 ; user that owns virtual environment.
 user=root
