--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -15,42 +15,51 @@ services:
     ports:
        - "80:5000"
     environment:
-       CKAN_DATASTORE_WRITE: "postgresql://ckan:ckan@postgresql:5432/datastore_default"
-       CKAN_DATASTORE_READ: "postgresql://datastore_default:datastore@postgresql:5432/datastore_default"
-       CKAN_PUSHER_URL: "http://pusher:8800"
+       CKAN_DATASTORE_WRITE: "postgresql://ckan:postgres@postgresql:5432/datastore"
+       CKAN_DATASTORE_READ: "postgresql://datastore_ro:readforfun@postgresql:5432/datastore"
+       CKAN_DATAPUSHER_URL: "http://pusher:8800"
        CKAN_REDIS_URL: "redis://redis:6379/0"
        CKAN_SITE_URL: "http://${LOCAL_ADDRESS}:80"
        CKAN_SOLR_URL: "http://solr:8983/solr/ckan"
-       CKAN_SQLALCHEMY_URL: "postgresql://ckan:ckan@postgresql:5432/ckan"
+       CKAN_SQLALCHEMY_URL: "postgresql://ckan:postgres@postgresql:5432/ckan"
+       POSTGRES_PASSWORD: "postgres"
+       POSTGRES_PORT: "5432"
+       DS_RO_PASS: "readforfun"
     #volumes:
-       # - ./ckan-entrypoint.sh:/ckan-entrypoint.sh 
+       # - ./ckan-entrypoint.sh:/ckan-entrypoint.sh
        #- ../Plugins/ckanext-TIBtheme:/usr/lib/ckan/default/src/ckanext-TIBtheme
        # - ../Plugins/ckanext-SPARQLWrapper:/usr/lib/ckan/default/src/ckanext-SPARQLWrapper
        # - ../Plugins/ckanext-videoviewer:/usr/lib/ckan/default/src/ckanext-videoviewer
     depends_on:
         - postgresql
   postgresql:
-    build: ./postgresql-loaded/
-    image: postgresql:loaded
+    build:
+      context: ./postgresql/
+      args:
+        POSTGRES_PASSWORD: "postgres"
+        DS_RO_PASS: "readforfun"
     networks:
         - db
     expose:
         - "5432"
+    environment:
+        POSTGRES_PASSWORD: "postgres"
+        DS_RO_PASS: "readforfun"
   solr:
     build: ./solr/
-    image: fhg/solr
+    image: solr:local
     networks:
         - db
     expose:
         - "8983"
   redis:
-    image: redis
+    image: redis:6.2
     networks:
         - db
     expose:
         - "6379"
   pusher:
-    image: easyckan/ckan-datapusher:2.6
+    image: clementmouchet/datapusher
     networks:
         - db
     expose:
@@ -119,7 +128,7 @@ services:
         - files2:/virtuoso/metadataimport
     networks:
         - sparql
-        
+
   rdfunit:
     build: ~/Documents/STREAM/2.2/data_validation_with_shacl/RDFUnit/
     ports:
@@ -141,13 +150,13 @@ services:
          - ~/Documents/STREAM/2.2/data_validation_with_shacl/Jekyll-RDF/my_page2:/srv/jekyll/my_page
      networks:
          - sub
-      
-      
+
+
 networks:
-    db: 
-    sub: 
-    sparql: 
-        
+    db:
+    sub:
+    sparql:
+
 volumes:
     files: {}
     files2: {}
