--- a/docker/solr/Dockerfile
+++ b/docker/solr/Dockerfile
@@ -1,10 +1,30 @@
-FROM ckan/solr
+FROM solr:6.6.5
+MAINTAINER Open Knowledge
 
+# Enviroment
+ENV SOLR_CORE ckan
 
+# Create Directories
+RUN mkdir -p /opt/solr/server/solr/$SOLR_CORE/conf
+RUN mkdir -p /opt/solr/server/solr/$SOLR_CORE/data
 
-#ENV CKAN_VERSION 2.7.0
-#RUN curl https://raw.githubusercontent.com/ckan/ckan/ckan-$CKAN_VERSION/ckan/config/solr/schema.xml > /schema.xml
-RUN mkdir -p /opt/solr/example/solr/ckan/conf/
-#RUN mv /schema.xml /opt/solr/server/solr/ckan/conf/schema.xml
-ADD schema.xml /opt/solr/server/solr/ckan/conf/schema.xml
-ADD solrconfig.xml /opt/solr/server/solr/ckan/conf/solrconfig.xml
+# Adding Files
+ADD solrconfig.xml \
+schema.xml \
+https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/currency.xml \
+https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/synonyms.txt \
+https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/stopwords.txt \
+https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/protwords.txt \
+https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/data_driven_schema_configs/conf/elevate.xml \
+/opt/solr/server/solr/$SOLR_CORE/conf/
+
+# Create Core.properties
+RUN echo name=$SOLR_CORE > /opt/solr/server/solr/$SOLR_CORE/core.properties
+
+# Giving ownership to Solr
+
+USER root
+RUN chown -R $SOLR_USER:$SOLR_USER /opt/solr/server/solr/$SOLR_CORE
+
+# User
+USER $SOLR_USER:$SOLR_USER
