--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,15 +26,24 @@ services:
        VIRTUAL_HOST: "${BASE_DOMAIN}"
        VIRTUAL_PORT: "5000"
        LETSENCRYPT_HOST: "${BASE_DOMAIN}"
+       POSTGRES_PASSWORD: "postgres"
+       POSTGRES_PORT: "5432"
+       DS_RO_PASS: "readforfun"
     depends_on:
         - postgresql
   postgresql:
-    build: ./postgresql-loaded/
-    image: postgresql:loaded
+    build:
+      context: ./postgresql/
+      args:
+        POSTGRES_PASSWORD: "postgres"
+        DS_RO_PASS: "readforfun"
     networks:
         - db
     expose:
         - "5432"
+    environment:
+        POSTGRES_PASSWORD: "postgres"
+        DS_RO_PASS: "readforfun"
   solr:
     build: ./solr/
     image: fhg/solr
@@ -43,13 +52,13 @@ services:
     expose:
         - "8983"
   redis:
-    image: redis
+    image: redis:6.2
     networks:
         - db
     expose:
         - "6379"
   pusher:
-    image: easyckan/ckan-datapusher:2.6
+    image: clementmouchet/datapusher
     networks:
         - db
     expose:
@@ -80,6 +89,7 @@ services:
     image: docker.pkg.github.com/aksw/docker-virtuoso/docker-virtuoso:latest
     expose:
         - "8890"
+        - "1111"
     environment:
         DBA_PASSWORD: "${VIRTUOSO_PASSWORD}"
         SPARQL_UPDATE: "true"
