--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "Plugins/ckanext-tags"]
 	path = Plugins/ckanext-tags
 	url = https://github.com:stream-project/ckanext-tags.git
+[submodule "docker/taxonomy-service-gui"]
+	path = docker/taxonomy-service-gui
+	url = https://github.com/stream-project/taxonomy-service-gui.git
