--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -177,6 +177,36 @@ services:
     networks:
       - sub
 
+  sparnatural:
+    image: nginx
+    networks:
+        - sub
+    expose:
+       - "80"
+    environment:
+       VIRTUAL_HOST: "rdfdata.${BASE_DOMAIN}"
+       VIRTUAL_PORT: "80"
+#       LETSENCRYPT_HOST: "rdfdata.${BASE_DOMAIN}"
+       BASE_DOMAIN: "rdfdata.${BASE_DOMAIN}"
+       HTTPS_METHOD: "noredirect"
+    volumes:
+        - ./Sparnatural:/usr/share/nginx/html:ro
+
+  yasgui:
+    image: nginx
+    networks:
+        - sub
+    expose:
+       - "80"
+    environment:
+       VIRTUAL_HOST: "yasgui.${BASE_DOMAIN}"
+       VIRTUAL_PORT: "80"
+#       LETSENCRYPT_HOST: "yasgui.${BASE_DOMAIN}"
+       BASE_DOMAIN: "yasgui.${BASE_DOMAIN}"
+       HTTPS_METHOD: "noredirect"
+    volumes:
+        - ./yasgui:/usr/share/nginx/html:ro
+
 networks:
     db:
     sparql:
